--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,11 +16,15 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
-        cache: 'npm'
         registry-url: https://registry.npmjs.org/
 
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: latest
+
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
 
     - name: Run tests
       run: npm test
